--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,11 +1,34 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Hello Coursera</title>
+<title>Module 2 Solution</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-<h1>Hello Coursera</h1>
+<h1>Module 2 Solution - Responsive Design</h1>
+<div id=container>
+	<section class=sec>
+		<div class=secTitle id=secTitle1>Priority Info</div>
+		<div class=secTxt>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!
+		</div>
+	</section>
+
+	<section class=sec>
+		<div  class=secTitle id=secTitle2>General Info</div>
+		<div class=secTxt>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!
+		</div>
+	</section>
+
+	<section class=sec id=sec3>
+		<div  class=secTitle id=secTitle3>Reminder Info</div>
+		<div class=secTxt>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!
+		</div>
+	</section>
+</div>
 </body>
 
 </html>
