--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Module 2 Solution</title>
 <link rel="stylesheet" href="css/styles.css">
 </head>
