--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,21 +9,21 @@
 <body>
 <h1>Module 2 Solution - Responsive Design</h1>
 <div id=container>
-	<section class=sec>
+	<section class="sec col-lg-4 col-md-6">
 		<div class=secTitle id=secTitle1>Priority Info</div>
 		<div class=secTxt>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!
 		</div>
 	</section>
 
-	<section class=sec>
+	<section class="sec col-lg-4 col-md-6">
 		<div  class=secTitle id=secTitle2>General Info</div>
 		<div class=secTxt>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!
 		</div>
 	</section>
 
-	<section class=sec id=sec3>
+	<section class="sec col-lg-4 col-md-12">
 		<div  class=secTitle id=secTitle3>Reminder Info</div>
 		<div class=secTxt>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!
